Thread pools, Synchronizers, Locks, and Atomics