@@ -9,6 +9,7 @@ import java.util.concurrent.Executors;
 import java.util.concurrent.Future;
 import java.util.concurrent.TimeUnit;
 import java.util.function.Function;
+import java.util.stream.Collectors;
 
 public class BackgroundExecutor implements AutoCloseable {
 
@@ -32,7 +33,7 @@ public class BackgroundExecutor implements AutoCloseable {
 
         return tasks.stream()
                 .map(executor::submit)
-                .toList();
+                .collect(Collectors.toList());
     }
 
     public <T> List<Future<T>> executeCallables(List<Callable<T>> tasks) {
